--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -19,7 +19,7 @@ Veel plezier!
 ## Wat heb je nodig
 - [ChatGPT (Pro)](https://chat.openai.com/auth/login)
 
-- [Intellij](https://www.jetbrains.com/idea/download/download-thanks.html?platform=windows&code=IIC)
+- een IDE, in de workshop gebruiken we [Intellij](https://www.jetbrains.com/idea/download/download-thanks.html?platform=windows&code=IIC). Wil je een andere IDE gebruiken bekijk dan of de te nemen stappen ook mogelijk zijn zoals het gebruik van plugins.
 
 - Java
  
@@ -29,4 +29,4 @@ Veel plezier!
 - Kennis om dit morgen direct toe te passen in je opdracht.
 
 ## Hulp nodig?
-Wanneer je hulp nodig hebt vraag om hulp bij iemand met een **the/experts shirt**. 
+Wanneer je hulp nodig hebt vraag om hulp bij iemand met een **the/experts** shirt. 
