--- a/docs/3.opdracht1.md
+++ b/docs/3.opdracht1.md
@@ -15,6 +15,8 @@ Requirements:
 
 - Delen: de rekenmachine moet een methode bevatten om het ene getal door het andere te delen, met ondersteuning voor decimalen en het omgaan met deling door nul-fouten.
 
+``` !!!!! IMPORTANT NOTE: Voordat we gaan beginnen, straks gaan we gebruiken maken van ChatGPT, controleer zelf het antwoordt dat wordt teruggegeven door ChatGPT! De gegeneerde code is namelijk niet altijd 100% correct maar geeft je een zetje in de goede richting. Dit zorgt voor een kritische blik op het gene wat je laat genereren. ```
+
 ##  1.1 Cucumber Feature file maken.
 
 Een feature file beschrijft een scenario in begrijpelijke mensentaal. In die feature file wordt het gewenste gedrag beschreven welke stappen er genomen dienen te worden om tot een bepaald resultaat te komen.
@@ -30,9 +32,12 @@ Scenario: Scenarionaam
 
 Opdracht: Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
-Opdracht: Maak een nieuwe directory in je project in Intellij aan genaamd: "features"
+Opdracht: Maak een nieuwe folder in je project aan genaamd: "features". Deze folder moet onder de resources folder komen zoals in de voorbereidingen is gedaan.
 
 Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de features folder zoals hieronder weergegeven. Maak dit bestand eerst aan.
+
+
+
 ```
 - src
   - test
