update docs for python

--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -20,4 +20,7 @@ Open de terminal in PyCharm en installeer de volgende packages aan de hand van d
 ```
 pip install behave
 pip install fastapi
+pip install uvicorn
+pip install pydantic
+pip install requests
 ```
