--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -40,10 +40,10 @@ Scenario: Scenarionaam
   Then The result is 6 slices left
 ```
 
-**Opdracht:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
+- **Opdracht:** Genereer een Cucumber feature file met de gegeven requirements in ChatGPT.
 
-**Opdracht:** Maak een nieuwe folder in je project aan genaamd: "features". Deze folder moet onder de resources folder
-komen zoals in de voorbereidingen is gedaan.
+- **Opdracht:** Maak een nieuwe folder in je project aan genaamd: "features". Deze folder moet onder de resources folder
+  komen zoals in de voorbereidingen is gedaan.
 
 Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de features
 folder zoals hieronder weergegeven. Maak dit bestand eerst aan.
@@ -68,8 +68,8 @@ Gherkin.
 Een step file in Java wordt geschreven als een Java-klasse met behulp van Cucumber's Java API. Deze klasse bevat
 methoden die zijn geannoteerd door specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But.
 
-Opdracht: Maak een bestand aan in de map zoals hieronder in de afbeelding weergegeven. Geef dit bestand de
-naam: `CalculatorSteps.java`.
+- **Opdracht:** Maak een bestand aan in de map zoals hieronder in de afbeelding weergegeven. Geef dit bestand de
+  naam: `CalculatorSteps.java`.
 
 ![project-structure2.jpg](project-structure2.jpg)
 
@@ -78,10 +78,9 @@ file wilt genereren. De eerder gegeneerde Gherkin code wordt automatisch gebruik
 
 > **Hint:** Vraag aan ChatGPT of deze de step file wilt genereren in java.
 
-
 ## 1.3 Calculator applicatie
 
-Tot slot, om de cucumber testen te laten slagen is de java code nodig voor de calculator zelf. Dit kan je doen op 
+Tot slot, om de cucumber testen te laten slagen is de java code nodig voor de calculator zelf. Dit kan je doen op
 dezelfde manier als bij opdracht 1.1 & 1.2.
 
 Maak eerst een nieuw Java-bestand aan in je project voor de Calculator-klasse. Plaats het
@@ -89,7 +88,7 @@ onder `src/main/java/com/example` met de bestandsnaam `Calculator.java`.
 
 ![project-structure.jpg](project-structure.jpg)
 
-Opdracht: Plak de gegeneerde code door ChatGPT in het `Calculator.java` bestand.
+- **Opdracht:** Plak de gegeneerde code door ChatGPT in het `Calculator.java` bestand.
 
 ## 1.4 run test
 
@@ -108,19 +107,23 @@ een the/experts. shirt om wat hulp.
 
 Herhaal boven staande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
 
--Exponentiation: The calculator should offer a method for raising a number to a given power, including fractional and
-negative exponents.
+- **Machtsverheffing:** De rekenmachine moet een methode bieden om een getal tot een gegeven macht te verheffen,
+  inclusief
+  fractionele en negatieve exponenten.
 
--Square root: The calculator should have a method for calculating the square root of a given number, handling both
-positive and negative input values.
+- **Vierkantswortel:** De rekenmachine moet een methode hebben om de vierkantswortel van een gegeven getal te berekenen,
+  met
+  de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
 
--Factorial: The calculator should provide a method for calculating the factorial of a non-negative integer.
+- **Functie van een getal:** De rekenmachine moet een methode bieden om de functie van een niet-negatief geheel getal te
+  berekenen.
 
--Logarithms: The calculator should include methods for calculating natural logarithms (base e) and common logarithms (
-base 10) of positive numbers.
+- **Logaritmes:** De rekenmachine moet methoden bevatten om natuurlijke logaritmes (basis e) en gemeenschappelijke
+  logaritmes (basis 10) van positieve getallen te berekenen.
 
--Trigonometry: The calculator should offer methods for calculating sine, cosine, and tangent of angles, with support for
-both radians and degrees.
+- **Trigonometrie:** De rekenmachine moet methoden bieden om de sinus, cosinus en tangens van hoeken te berekenen, met
+  ondersteuning voor zowel radialen als graden.
 
--Memory functions: The calculator should have methods for storing, recalling, and clearing a value in its memory,
-allowing users to perform more complex calculations with ease.
+- **Geheugenfuncties:** De rekenmachine moet methoden hebben om een waarde in het geheugen op te slaan, op te roepen en
+  te
+  wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
