--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -22,8 +22,8 @@ gebruik te maken van Behaviour-driven development BDD. Vanuit de business heb je
   decimalen en het omgaan met deling door nul-fouten.
 
 > **IMPORTANT NOTE:** Voordat we gaan beginnen, straks gaan we gebruiken maken van ChatGPT, controleer zelf het
-> antwoordt dat wordt teruggegeven door ChatGPT! De gegeneerde code is namelijk niet altijd 100% correct maar geeft je
-> een zetje in de goede richting. Dit zorgt voor een kritische blik op het gene wat je laat genereren.
+> antwoordt dat wordt teruggegeven door ChatGPT! De gegeneerde code is namelijk niet altijd 100% correct, maar geeft je
+> een zetje in de goede richting. Dit zorgt voor een kritische blik op dat wat je laat genereren.
 
 ## 1.1 Cucumber Feature file maken.
 
