--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -5,43 +5,55 @@ sidebar_position: 2
 # Voorbereidingen
 
 ## ChatGPT account
+
 Maak een account aan op [ChatGPT](https://chat.openai.com/)
 
-##  Project aanmaken in Intellij
+## Project aanmaken in Intellij
+
 - Geef je project een naam en kies voor de optie Maven bij Build system
-![project.jpg](project.jpg)
+  ![project.jpg](project.jpg)
 
 ## Java 17 installeren
-- Installatie instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [MacOs](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jou OS.
+
+- Installatie-instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows)
+  of [MacOs](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie
+  geschikt is voor jouw OS.
 
 - [Java download link](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html)
 
-##  Maven 3.9.1 installeren
-- Als je Maven nog niet hebt geinstalleerd download [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip) 
+## Maven 3.9.1 installeren
+
+- Als je Maven nog niet hebt geinstalleerd
+  download [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
     - Unzip het bestand en plaats het op een plek naar keuze:
         - Voorbeeld Windows: "C:\ws\maven"
         - Voorbeeld Mac: ""
 
     - Voeg de Maven bin folder toe aan je path variablen.
         - Voorbeeld Windows: ![maven-path.jpg](maven-path.jpg)
-        - Voorbeeld Mac: 
+        - Voorbeeld Mac:
 
 Controleer of Maven goed geinstalleerd is door de command prompt te openen en typ "mvn -v"
 ![maven.jpg](maven.jpg)
 
-Reboot je laptop zodat je zeker weet dat maven goed is geïnstalleerd. Als je dit niet doet kan het zijn dat maven niet herkent wordt.
+Reboot je laptop zodat je zeker weet dat maven goed is geïnstalleerd. Als je dit niet doet kan het zijn dat maven niet
+herkent, wordt.
 
-Weet je niet hoe je Maven installeert volg dan de stappen in de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) en [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
+Weet je niet hoe je Maven installeert volg dan de stappen in de link
+voor [Windows](https://phoenixnap.com/kb/install-maven-windows)
+en [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
 
+## Plugins in Intellij installeren
 
-##  Plugins in Intellij installeren
 - Gherkin
-- Cucumber for java 
+- Cucumber for java
 
-Komen de plugins niet terug in de zoekresultaten, Controleer dan ook het tabje met de al geinstalleerde plugins.
+Komen de plugins niet terug in de zoekresultaten, Controleer dan ook het tabje met de al geïnstalleerde plugins.
 
-##  Dependency toevoegen in pom.xml
-Tip: Wanneer je over het panel hovert verschijnt er een kopieer knop. 
+## Dependency toevoegen in pom.xml
+
+Tip: Wanneer je over het panel hovert verschijnt er een kopieerknop.
+
 ``` 
     <dependencies>
         <dependency>
@@ -54,7 +66,9 @@ Tip: Wanneer je over het panel hovert verschijnt er een kopieer knop.
 ```
 
 ## Resources folder toevoegen
-Volg de onderstaande stappen om de resource folder toe te voegen aan het project onder de test folder zodat uiteindelijk dit het eindresultaat is ``` src/test/resources ```
+
+Volg de onderstaande stappen om de resource folder toe te voegen aan het project onder de test folder zodat uiteindelijk
+dit het eindresultaat is ``` src/test/resources ```
 
 ![stap1.jpg](stap1.jpg)
 
