--- a/docs/java/4.opdracht2.md
+++ b/docs/java/4.opdracht2.md
@@ -3,10 +3,15 @@ sidebar_position: 3
 ---
 
 # Opdracht 2: Bookstore
-In de tweede opdracht ga je aan de slag om een wat gecompliceerdere applicatie te genereren. We gaan eerst beginnen met aanmaken van een nieuw project. Doe dat op de zelfde manier als in opdracht 1.
-In deze opdracht gaan we in twee delen een bookstore api ontwikkelen aan de hand van Karate, een plugin voor cucumber die speciaal is ontwikkeld voor API testen. Wilt u meer weten over Karate, kijk dan op de Github pagina van [Karate Labs](https://github.com/karatelabs/karate)
+
+In de tweede opdracht ga je aan de slag om een wat gecompliceerdere applicatie te genereren. We gaan eerst beginnen met
+aanmaken van een nieuw project. Doe dat op dezelfde manier als in opdracht 1.
+In deze opdracht gaan we in twee delen een bookstore api ontwikkelen aan de hand van Karate, een plugin voor cucumber
+die speciaal is ontwikkeld voor API testen. Wilt u meer weten over Karate, kijk dan op de Github pagina
+van [Karate Labs](https://github.com/karatelabs/karate)
 
 ## 2.1 Feature file
+
 Als je een project hebt aangemaakt kan je aan ChatGPT vragen of deze een karate cucumber bestand kan genereren.
 Hiervoor zijn de volgende requirements op gezet:
 
@@ -18,7 +23,9 @@ Hiervoor zijn de volgende requirements op gezet:
 - Ik wil een boek kunnen verwijderen
 - Ik wil een boek kunnen aanpassen
 
-Als je het bestand hebt gekregen, dan moet je deze op een andere plek zetten dan bij een standaard cucumber file. Deze feature file moet in dezelfde directory geplaatst worden als de stepfile:
+Als je het bestand hebt gekregen, dan moet je deze op een andere plek zetten dan bij een standaard cucumber file. Deze
+feature file moet in dezelfde directory geplaatst worden als de stepfile:
+
 ```
 - src
   - test
@@ -29,8 +36,10 @@ Als je het bestand hebt gekregen, dan moet je deze op een andere plek zetten dan
 ```
 
 ## 2.2 Stepfile
-Ook bij deze cucumber file heb je een step file nodig. De stepfile voor een karate cucumber file is een stuk simpeler doordat de functies refereren naar de gegevens binnen de feature file.
-In het feature file staan namelijke alle benodigdheden die je nodig hebt voor de API request.
+
+Ook bij deze cucumber file heb je een step file nodig. De stepfile voor een karate cucumber file is een stuk simpeler
+doordat de functies verwijzen naar de gegevens binnen de feature file.
+In het feature file staan namelijk alle benodigdheden die je nodig hebt voor de API request.
 
 Plaats dit bestand in de folder `src/test/java/com/example/BookstoreAPITest.java`.
 
