--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -54,7 +54,7 @@ Komen de plugins niet terug in de zoekresultaten, Controleer dan ook het tabje m
 
 Tip: Wanneer je over het panel hovert verschijnt er een kopieerknop.
 
-``` 
+```xml
     <dependencies>
         <dependency>
             <groupId>io.cucumber</groupId>
