--- a/docs/java/3.opdracht1.md
+++ b/docs/java/3.opdracht1.md
@@ -48,13 +48,13 @@ Scenario: Scenarionaam
 Als de feature file is gegenereerd, kan je de gegenereerde code kopiëren. Plak de code in een bestand in de features
 folder zoals hieronder weergegeven. Maak dit bestand eerst aan.
 
-```
+```yml
 - src
   - test
-    - java
-    - resources
-      - features
-        - calculator.feature
+  - java
+  - resources
+  - features
+  - calculator.feature
 ```
 
 ## 1.2 Maak een step file aan
@@ -108,12 +108,10 @@ een the/experts. shirt om wat hulp.
 Herhaal boven staande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
 
 - **Machtsverheffing:** De rekenmachine moet een methode bieden om een getal tot een gegeven macht te verheffen,
-  inclusief
-  fractionele en negatieve exponenten.
+  inclusief fractionele en negatieve exponenten.
 
 - **Vierkantswortel:** De rekenmachine moet een methode hebben om de vierkantswortel van een gegeven getal te berekenen,
-  met
-  de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
+  met de mogelijkheid voor zowel positieve als negatieve invoerwaarden.
 
 - **Functie van een getal:** De rekenmachine moet een methode bieden om de functie van een niet-negatief geheel getal te
   berekenen.
@@ -125,5 +123,4 @@ Herhaal boven staande stappen en voeg extra functionaliteit toe aan de calculato
   ondersteuning voor zowel radialen als graden.
 
 - **Geheugenfuncties:** De rekenmachine moet methoden hebben om een waarde in het geheugen op te slaan, op te roepen en
-  te
-  wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
+  te wissen, zodat gebruikers gemakkelijker complexe berekeningen kunnen uitvoeren.
