--- a/docs/java/4.opdracht2.md
+++ b/docs/java/4.opdracht2.md
@@ -26,7 +26,7 @@ Hiervoor zijn de volgende requirements op gezet:
 Als je het bestand hebt gekregen, dan moet je deze op een andere plek zetten dan bij een standaard cucumber file. Deze
 feature file moet in dezelfde directory geplaatst worden als de stepfile:
 
-```
+```yml
 - src
   - test
     - java
@@ -43,6 +43,6 @@ In het feature file staan namelijk alle benodigdheden die je nodig hebt voor de 
 
 Plaats dit bestand in de folder `src/test/java/com/example/BookstoreAPITest.java`.
 
-Let goed op, Binnen ```Karate.run("bookApi")``` moet je de juiste naam staan van het feature file.
+Let goed op, Binnen `Karate.run("bookApi")` moet je de juiste naam staan van het feature file.
 
 In de volgende opdracht gaan we proberen aan de hand van je cucumber file en step file de API te genereren.
