--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -13,21 +13,11 @@ Maak een account aan op [ChatGPT](https://chat.openai.com/)
 - [Java download link](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html)
 
 ##  Maven 3.9.1 installeren
-- Als je Maven nog niet hebt geinstalleerd download [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
-    - Unzip het bestand en plaats het op een plek naar keuze:
-        - Voorbeeld Windows: "C:\ws\maven"
-        - Voorbeeld Mac: ""
+- [Maven download link](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
 
-    - Voeg de Maven bin folder toe aan je path variablen.
-        - Voorbeeld Windows: ![maven-path.jpg](maven-path.jpg)
-        - Voorbeeld Mac:
+- Volg vervolgens de installatie stappen via de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) of [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
 
-Controleer of Maven goed geinstalleerd is door de command prompt te openen en typ "mvn -v"
-![maven.jpg](maven.jpg)
-
-Reboot je laptop zodat je zeker weet dat maven goed is geïnstalleerd. Als je dit niet doet kan het zijn dat maven niet herkent wordt.
-
-Weet je niet hoe je Maven installeert volg dan de stappen in de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) en [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
+Mocht Maven nog toch niet herkend worden door je laptop? Reboot je laptop en controleer hierna of Maven goed is geïnstalleerd.
 
 # Intellij
 
@@ -42,7 +32,6 @@ Weet je niet hoe je Maven installeert volg dan de stappen in de link voor [Windo
 Komen de plugins niet terug in de zoekresultaten, Controleer dan ook het tabje met de al geinstalleerde plugins.
 
 
-
 ## Resources folder toevoegen
 Volg de onderstaande stappen om de resource folder toe te voegen aan het project onder de test folder zodat uiteindelijk dit het eindresultaat is ``` src/test/resources ```
 
@@ -53,18 +42,6 @@ Volg de onderstaande stappen om de resource folder toe te voegen aan het project
 ![stap3.jpg](stap3.jpg)
 
 ![stap4.jpg](stap4.jpg)
-
-# Visual Studio Code
-
-## Installeer extensions voor Visual Studio Code
-Klik op de extension knop van Visual Studio Code. Zoek vervolgens op `Extension Pack for Java` en installeer deze. 
-Zoek ook op `Cucumber (Gherkin) Full Support` en installeer deze ook.
-
-## Project aanmaken in Visual Studio Code
-Druk op `ctrl` + `shift` + `p` of `cmd` + `shift` + `p` in VS Code.
-Type daar: `Java: Create Java Project`.
-Selecteer vervolgens `Maven` en bij de archtype zoek naar `io.cucumber`, waarschijnlijk moet je eerst nog op More... klikken. Selecteer de meest recente versie.
-Geef een group Id en artifact Id in, vervolgens kan je de locatie selecteren waar je het project op wilt slaan.
 
 ##  Dependency toevoegen in pom.xml
 Tip: Wanneer je over het panel hovert verschijnt er een kopieer knop.
@@ -78,3 +55,17 @@ Tip: Wanneer je over het panel hovert verschijnt er een kopieer knop.
         </dependency>
     </dependencies>
 ```
+
+# Visual Studio Code
+
+## Installeer extensions voor Visual Studio Code
+Klik op de extension knop van Visual Studio Code. Zoek vervolgens op 
+- `Extension Pack for Java` en installeer deze. 
+- `Cucumber (Gherkin) Full Support` en installeer deze ook.
+
+## Project aanmaken in Visual Studio Code
+Druk op `ctrl` + `shift` + `p` of `cmd` + `shift` + `p` in VS Code.
+Type daar: `Java: Create Java Project`.
+Selecteer vervolgens `Maven` en bij de archtype zoek naar `io.cucumber`, waarschijnlijk moet je eerst nog op More... klikken. Selecteer de meest recente versie.
+Geef een group Id en artifact Id in, vervolgens kan je de locatie selecteren waar je het project op wilt slaan.
+
