--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -11,6 +11,9 @@ Maak een account aan op [ChatGPT](https://chat.openai.com/)
 ## Python installeren
 - Installatie instructies Python voor [Windows](https://www.digitalocean.com/community/tutorials/install-python-windows-10) of [MacOs](https://www.makeuseof.com/how-to-install-python-on-mac/). Controleer in de instructies welk versie geschikt is voor jou OS.
 
+## PyCharm installeren
+Installeer [PyCharm](https://www.jetbrains.com/pycharm/download)
+
 ##  Project aanmaken in PyCharm
 Open PyCharm en klik op nieuw project. Selecteer vervolgens `Pure Python` en geef je project een naam.
 ![project.png](project.png)
