css update button and added extra sidebar in config

--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -14,16 +14,18 @@ Maak een account aan op [ChatGPT](https://chat.openai.com/)
 ## PyCharm installeren
 Installeer [PyCharm](https://www.jetbrains.com/pycharm/download)
 
-##  Project aanmaken in PyCharm
+## Project aanmaken in PyCharm
 Open PyCharm en klik op nieuw project. Selecteer vervolgens `Pure Python` en geef je project een naam.
 ![project.png](project.png)
 
-##  Project aanmaken in Visual Studio Code
-Druk op `ctrl` + `shift` + `p` of `cmd` + `shift` + `p` in VS Code.
-Geef vervolgens daar in `Shell Command: install 'code' command in PATH`.
-Open een nieuwe terminal. 
-Vervolgens kan je in de terminal `mkdir X` waarbij X de naam van je project is. Type daarna `cd X` en dan `code .`
+## Project aanmaken in Visual Studio Code
+- Maak een projectmap aan op locatie naar keuze.
 
+- Open de projectmap in visual studio code via File -> Add Folder to Workspace
+
+- Installeer extensions 
+    - Python
+    - Python Extension Pack
 
 ##  Packages installeren 
 Open de terminal in PyCharm/Visual Studio Code en installeer de volgende packages aan de hand van deze commands:
