--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -8,28 +8,28 @@ sidebar_position: 2
 Maak een account aan op [ChatGPT](https://chat.openai.com/)
 
 ## Java 17 installeren
-- Installatie instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [MacOs](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jou OS.
-
-- [Java download link](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html)
+-Volg de installatie-instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [macOS](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jouw OS. De Java-ontwikkelomgeving (JDK) is te vinden [op deze pagina](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html).
 
 ##  Maven 3.9.1 installeren
-- [Maven download link](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
+- Als je Maven nog niet hebt geïnstalleerd download [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
 
-- Volg vervolgens de installatie stappen via de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) of [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
+- Volg vervolgens de installatiestappen via de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) of [macOS](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
 
 Mocht Maven nog toch niet herkend worden door je laptop? Reboot je laptop en controleer hierna of Maven goed is geïnstalleerd.
 
-# Intellij
+# IntelliJ
 
-##  Project aanmaken in Intellij
+##  Project aanmaken in IntelliJ
 - Geef je project een naam en kies voor de optie Maven bij Build system
 ![project.jpg](project.jpg)
 
-##  Plugins in Intellij installeren
+##  Plugins in IntelliJ installeren
+Je hebt plug-ins nodig in IntelliJ zodat hij BDD-scenarios herkent.
+Ga naar file → settings → plugins. Zoek en installeer onderstaande plug-ins.
 - Gherkin
-- Cucumber for java 
+- Cucumber for Java
 
-Komen de plugins niet terug in de zoekresultaten, Controleer dan ook het tabje met de al geinstalleerde plugins.
+Komen de plug-ins niet terug in de zoekresultaten? Controleer dan ook het tabje rechtsboven in het venster met de al geïnstalleerde plug-ins.
 
 
 ## Resources folder toevoegen
@@ -44,7 +44,7 @@ Volg de onderstaande stappen om de resource folder toe te voegen aan het project
 ![stap4.jpg](stap4.jpg)
 
 ##  Dependency toevoegen in pom.xml
-Tip: Wanneer je over het panel hovert verschijnt er een kopieer knop.
+Tip: Wanneer je over het onderstaande panel hovert verschijnt er een kopieer knop.
 ``` 
     <dependencies>
         <dependency>
