--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -62,8 +62,15 @@ Klik op de extension knop van Visual Studio Code. Zoek vervolgens op
 - `Extension Pack for Java` en installeer deze. 
 - `Cucumber (Gherkin) Full Support` en installeer deze ook.
 
+![extensions.jpg](extensions.jpg)
+
 ## Project aanmaken in Visual Studio Code
-Druk op `ctrl` + `shift` + `p` of `cmd` + `shift` + `p` in VS Code.
-Type daar: `Java: Create Java Project`.
-Selecteer vervolgens `Maven` en bij de archtype zoek naar `io.cucumber`, waarschijnlijk moet je eerst nog op More... klikken. Selecteer de meest recente versie.
-Geef een group Id en artifact Id in, vervolgens kan je de locatie selecteren waar je het project op wilt slaan.
+- Druk op `ctrl` + `shift` + `p` of `cmd` + `shift` + `p` in VS Code.
+- Type daar: `Java: Create Java Project`.
+- Selecteer vervolgens `Maven` 
+- Zoek bij de archtype naar `io.cucumber`, waarschijnlijk moet je eerst nog op More... klikken.
+- Selecteer de meest recente versie.
+- Geef een group Id en artifact Id in, vervolgens kan je de locatie selecteren waar je het project op wilt slaan.
+
+![io.cucumber.jpg](io.cucumber.jpg)
+
