--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -26,13 +26,17 @@ Zie je deze optie niet zoals in de afbeelding hieronder geef dan je project alle
 ![python2.jpg](python2.jpg)
 
 ## Project aanmaken in Visual Studio Code
-- Maak een projectmap aan op locatie naar keuze.
+- Maak een projectmap aan op een locatie naar keuze.
 
-- Open de projectmap in visual studio code via File -> Add Folder to Workspace
+- Open de projectmap in Visual Studio Code via File -> Add Folder to Workspace
 
-- Voor een goede werking van Python in Visual Studio Code is het verstanding om een tweetal extensies te installeren hierdoor krijg je bijvoorbeeld betere linting, debugging en indentation. De volgende extensions moet je hiervoor installeren: 
-    - `Python`
-    - `Python Extension Pack`
+## Installeer extensions voor Visual Studio Code
+Voor een goede werking van Python in Visual Studio Code is het verstandig om een tweetal extensies te installeren, hierdoor krijg je bijvoorbeeld betere linting, debugging en indentation. 
+De volgende extensions moet je hiervoor installeren.
+- `Python`
+- `Python Extension Pack`
+
+![extension-python.jpg](extension-python.jpg)
 
 ##  Packages installeren 
 Als laatste stap gaan we nog een aantal packages installeren via pip. pip is de package installer voor python. 
