--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -23,7 +23,7 @@ Open PyCharm en klik op nieuw project. Mocht je PyCharm al hebben geinstalleerd 
 
 
 Zie je deze optie niet zoals in de afbeelding hieronder geef dan je project alleen een naam en klik op create
-![python2.jpg](python2.jpg)
+![project2.jpg](project2.jpg)
 
 ## Project aanmaken in Visual Studio Code
 - Maak een projectmap aan op een locatie naar keuze. 
