--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -8,7 +8,7 @@ sidebar_position: 2
 Maak een account aan op [ChatGPT](https://chat.openai.com/)
 
 ## Java 17 installeren
--Volg de installatie-instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [macOS](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jouw OS. De Java-ontwikkelomgeving (JDK) is te vinden [op deze pagina](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html).
+Volg de installatie-instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [macOS](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jouw OS. De Java-ontwikkelomgeving (JDK) is te vinden [op deze pagina](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html).
 
 ##  Maven 3.9.1 installeren
 - Als je Maven nog niet hebt geïnstalleerd download [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip)
