--- a/docs/java/2.voorbereidingen.md
+++ b/docs/java/2.voorbereidingen.md
@@ -7,6 +7,11 @@ sidebar_position: 2
 ## ChatGPT account
 Maak een account aan op [ChatGPT](https://chat.openai.com/)
 
+## IDE
+Zorg dat je een ontwikkelomgeving (IDE) geïnstalleerd hebt. Voor Java adviseren wij 
+- [IntelliJ](https://www.jetbrains.com/idea/) - wil je dit installeren?
+- [Visual Studio Code](https://code.visualstudio.com/Download) - wil je dit installeren? 
+
 ## Java 17 installeren
 Volg de installatie-instructies Java 17 voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [macOS](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos). Controleer in de instructies welk versie geschikt is voor jouw OS. De Java-ontwikkelomgeving (JDK) is te vinden [op deze pagina](https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html).
 
@@ -25,6 +30,7 @@ Mocht Maven nog toch niet herkend worden door je laptop? Reboot je laptop en con
 
 ##  Plugins in IntelliJ installeren
 Je hebt plug-ins nodig in IntelliJ zodat hij BDD-scenarios herkent.
+
 Ga naar file → settings → plugins. Zoek en installeer onderstaande plug-ins.
 - Gherkin
 - Cucumber for Java
