--- a/docs/python/2.voorbereidingen.md
+++ b/docs/python/2.voorbereidingen.md
@@ -17,7 +17,7 @@ Zorg dat je een ontwikkelomgeving (IDE) geïnstalleerd hebt. Voor Python adviser
 - [Visual Studio Code](https://code.visualstudio.com/Download) - wil je dit installeren? 
 
 ## Project aanmaken in PyCharm
-Open PyCharm en klik op nieuw project. Mocht je PyCharm al hebben geinstalleerd en je een oudere versie hebt kan het zijn dat je de optie krijg om een framework te kiezen zoals in het plaatje hieronder. Selecteer `Pure Python` en geef je project een naam.
+Open PyCharm en klik op nieuw project. Mocht je PyCharm al hebben geïnstalleerd en je een oudere versie hebt kan het zijn dat je de optie krijg om een framework te kiezen zoals in het plaatje hieronder. Selecteer `Pure Python` en geef je project een naam.
 
 ![project.png](project.png)
 
