Opdracht 3 kleine toevoeging

--- a/docs/python/5.opdracht3.md
+++ b/docs/python/5.opdracht3.md
@@ -20,8 +20,13 @@ nieuw gegevensmodel maakt in Pydantic, kun je een klasse definiëren die is afge
 Dit geeft het model de mogelijkheid om automatisch de structuur van het model te valideren en de juiste
 gegevenstypes toe te passen op de velden van het model.
 
-Als alles volgens plan verloopt, zou je nu een FastAPI applicatie moeten hebben. Je kan deze draaien door
-`python main.py` uit te voeren in de terminal.
+Maak een bestand aan in je project genaamd `main.py` en plaats je code hier in.
+
+Als alles volgens plan verloopt, zou je nu een FastAPI applicatie moeten hebben. Om de API nu op te starten, 
+ga in je terminal naar de folder waar de `main.py` staat en voer je het commando `uvicorn main:app --reload` uit.
+
+Om te checken of de API draait, kan je in je browser naar `127.0.0.1:8000/books`, in het geval dat Chat-GPT een andere 
+pad heeft gegenereerd voor het ophalen van de boeken, gebruik dat pad dan.
 
 # Opdracht 3.3
 Tot slot kan je de test van opdracht 2 proberen uit te voeren door `behave` uit te voeren in de terminal
