--- a/docs/python/5.opdracht3.md
+++ b/docs/python/5.opdracht3.md
@@ -23,7 +23,7 @@ gegevenstypes toe te passen op de velden van het model.
 Als alles volgens plan verloopt, zou je nu een FastAPI applicatie moeten hebben. Je kan deze draaien door
 `python main.py` uit te voeren in de terminal.
 
-# Opdracht 3.3
+## Opdracht 3.3
 Tot slot kan je de test van opdracht 2 proberen uit te voeren door `behave` uit te voeren in de terminal
 in de folder van opdracht 2.
 
