Opdracht 1 kleine aanpassing

--- a/docs/java/5.opdracht3.md
+++ b/docs/java/5.opdracht3.md
@@ -10,6 +10,9 @@ Dit framework is vrij nieuw en daarom is het interesant om een API op te zetten 
 ## Opdracht 3.1
 Maak een derde project aan, selecteer nu Micronaut zoals in de afbeelding hier onder.
 ![micronaut.png](micronaut.png)
+ 
+Voor Visual Studio volg de zelfde stappen als vorige opdrachten maar in plaats van Cucumber archtype, 
+zoek naar `io.github.gasches.archetypes`, als het goed is komt dan `micronaut-service` naar boven, selecteer deze.
 
 ## Opdracht 3.2
 Vraag aan ChatGPT of deze een Micronaut applicatie kan ontwikkelen aan de hand van de feature file die in opdracht 2 is gegenereerd.
